--- a/maipogrande/ordenes/templates/ordenes/orden-eliminar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-eliminar.html
@@ -7,7 +7,7 @@
 {% block contenido %}
     <form class="text-justify border border-light p-5" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
         <p class="lead text-justify mx-auto" style="width: 400px;">
-            ¿Esta seguro de eliminar  la orden de compra?
+            ¿Está seguro de eliminar la orden de compra?
         </p>
         {% csrf_token %}
         <div class="text-center">
