--- a/maipogrande/productor/templates/productor/producto-detalle.html
+++ b/maipogrande/productor/templates/productor/producto-detalle.html
@@ -16,7 +16,7 @@
             <tbody>
             <tr>
                 <td class="py-0">Producto</td>
-                <td class="py-0">{{ producto.ProductName }}</td>
+                <td class="py-0" style="text-transform: uppercase">{{ producto.ProductName }}</td>
             </tr>
             <tr>
                 <td class="py-0">Categoría</td>
@@ -32,7 +32,7 @@
             </tr>
             <tr>
                 <td class="py-0">Observaciones del producto</td>
-                <td class="py-0">{{ producto.Observation }}</td>
+                <td class="py-0" style="text-transform: uppercase">{{ producto.Observation }}</td>
             </tr>
             </tbody>
         </table>
