--- a/maipogrande/transportista/templates/transportista/estadisticas/estadisticas-despachos-ver.html
+++ b/maipogrande/transportista/templates/transportista/estadisticas/estadisticas-despachos-ver.html
@@ -1,14 +1,14 @@
 {% extends 'core/base-inicial.html' %}
 
 {% block titulo %}
-    Estadísticas de despachos
+    Estadísticas de entregas
 {% endblock %}
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 {% block contenido %}
 {% if despachos %}
     <br><br>
-    <h4 class="text-justify">Despachos</h4>
+    <h4 class="text-justify">Entregas realizadas</h4>
     <br>
     <div class="text-justify col-md-12">
         <table >
@@ -38,13 +38,13 @@
         </table>
         <br>
         <h6>Total: ${{ valor_total|floatformat:0 }}</h6>
-        <h6>Promedio de venta: ${{ valor_promedio|floatformat:0 }}</h6>
-        <h6>Valor máximo de venta: ${{ valor_maximo|floatformat:0 }}</h6>
-        <h6>Valor mínimo de venta: ${{ valor_minimo|floatformat:0 }}</h6>
+        <h6>Promedio de valor de despacho: ${{ valor_promedio|floatformat:0 }}</h6>
+        <h6>Valor máximo de despachos: ${{ valor_maximo|floatformat:0 }}</h6>
+        <h6>Valor mínimo de despachos: ${{ valor_minimo|floatformat:0 }}</h6>
         <br>
     </div>
     <br><br>
-    <h4 class="text-justify">Venta de despachos por día</h4>
+    <h4 class="text-justify">Despachos por día</h4>
     <div class="text-justify col-md-12">
         <table >
             <tr>
@@ -73,9 +73,9 @@
     <br>
 {% else %}
     <p class="lead text-justify">
-        Por el momento usted no posee ventas.
-        En cuanto se realice el pago de una orden,
-        se visualizarán las estadísticas de ventas.<br>
+        Por el momento usted no posee despachos.
+        En cuanto se realice un despacho,
+        se visualizarán las estadísticas de despacho.<br>
     </p>
 {% endif %}
     <a class="btn btn-success"
