--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -68,7 +68,7 @@
         <p class="text-justify text-black">
             Periodicamente  se realizan subastas para que 
             los pedidos de nuestros clientes sean entregados,
-            en estassubasta de transporte,  todos los participantes pueden
+            en estas subastas de transporte, todos los participantes pueden
             adjudicarse un pedido el cual deberán entregar a 
             nuestros clientes, según los tiempos establecidos.
         </p>
