--- a/maipogrande/transportista/templates/historial/despachos-entregados-listar.html
+++ b/maipogrande/transportista/templates/historial/despachos-entregados-listar.html
@@ -47,7 +47,7 @@
                     <td class="py-0">{{ dispatch.DispatchDate }}</td>
                     <td class="py-0">{{ dispatch.DispatchValue }}</td>
                     <td class="py-0">{{ dispatch.DispatchWeight }} kg</td>
-                    <td class="py-0">{{ dispatch.CarrierObservation }}</td>
+                    <td class="py-0" style="text-transform: uppercase">{{ dispatch.CarrierObservation }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
